# proj-neonatal

./: .gitignore  project_structure.md  pyproject.toml
datasets/scripts/: convert_videos.py  data_normalizer.py  dataset_info.csv  spreadsheet_generator.py
docs/: datasets.md  keypoints.md
ml/: infer_yolo.py  train_yolo.py
ml/runs/pose/train/: events.out.tfevents.1753841821.vedita.34802.0  events.out.tfevents.1753841845.vedita.35195.0  events.out.tfevents.1753841948.vedita.36429.0  results.csv
