[tool.poetry]
name = "proj-neonatal"
version = "0.1.0"
description = "Projeto para Neonatal com módulos de ML e datasets"
authors = ["Seu Nome <seu.email@exemplo.com>"]
readme = "project_structure.md"
packages = [
    { include = "ml" },
    { include = "datasets" }
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
